--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
 title: Guiding Yourself with Love and Philosophy
-subtitle: "Love loves to love love."---James Joyce, Irish writer
+subtitle: Love loves to love love
 ---
