--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Guiding Yourself with Love and Philosophy
-subtitle: Love loves to love love
+title: Recording & Thinking & Learning
+subtitle: Never forget the original intention and keep the mission in mind
 ---
