--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Recording & Thinking & Learning
-subtitle: Never forget the original intention and keep the mission in mind
+title: Insights With Records
+subtitle: Never forget original intention and keep mission in mind
 ---
