--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Insights With Records
+title: <h5>Insights With Records</h5>
 subtitle: Never forget original intention and keep mission in mind
 ---
